--- a/src/ContosoUniversityCore/Features/Shared/_Layout.cshtml
+++ b/src/ContosoUniversityCore/Features/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">ContosoUniversityCore</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">KCDC 2017</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
