--- a/src/ContosoUniversityCore/Features/Student/Details.cshtml
+++ b/src/ContosoUniversityCore/Features/Student/Details.cshtml
@@ -21,6 +21,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayLabel(model => model.MiddleName)
+        </dt>
+
+        <dd>
+            @Html.Display(model => model.MiddleName)
+        </dd>
+
+        <dt>
             @Html.DisplayLabel(model => model.FirstMidName)
         </dt>
 
