--- a/src/ContosoUniversityCore/Features/Student/Edit.cshtml
+++ b/src/ContosoUniversityCore/Features/Student/Edit.cshtml
@@ -19,6 +19,7 @@
         @Html.ValidationDiv()
         @Html.Input(m => m.ID)
         @Html.FormBlock(m => m.LastName)
+        @Html.FormBlock(m => m.MiddleName)
         @Html.FormBlock(m => m.FirstMidName)
         @Html.FormBlock(m => m.EnrollmentDate)
 
